# pandorica

./: .gitignore  COMMERCIAL.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
brainstorm/align-mt-correspondence/: MAP.md  brief.md  candidates.md  ideas.md  report.md  validation.md
brainstorm/align-mt-correspondence/findings/: codebase-archaeology.md  contrarian.md  cross-domain.md  dd-confidence.md  dd-correspondence.md  dd-empirical.md  first-principles.md  impl-landscape.md  lit-landscape.md  val-assumptions.md  val-redteam.md
pandorica/: __init__.py  _version.py  cli.py
pandorica/io/: __init__.py  amira.py
pandorica/napari/: README.md  __init__.py  __main__.py  _geometry.py  _reader.py  _widget.py  napari.yaml
pandorica/stitch/: HOW_IT_WORKS.md  README.md  __init__.py  accel.py  chain.py  cli.py  contour_rotation.py  dataset.py  eggshell_rotation.py  geometry.py  image_pose.py  image_warp.py  inspect.py  io.py  match.py  stitch.py
pandorica/stitch/coarse/: __init__.py  ap_polarity.py  coarse.py  coarse_fusion.py  coarse_hybrid.py  cpd.py  rotation_search.py
pandorica/stitch/matching/: __init__.py  matcher.py  mt_endpoints.py  mt_transform.py
pandorica/stitch/pipeline/: __init__.py  core.py  intensity_qc.py  qc.py  stitcher.py
pandorica/stitch/transform/: __init__.py  applier.py  diagnostics.py  scale.py  solver.py  warp.py
pandorica/utils/: __init__.py  pointcloud.py
resources/: PANDORICA Logo.html
tests/: __init__.py  conftest.py  serial_stitching_utils.py  test_ap_polarity.py  test_applier.py  test_auto_gpu_chunk.py  test_boundary.py  test_chain.py  test_coarse.py  test_coarse_fusion.py  test_coarse_hybrid.py  test_contour_rotation.py  test_core.py  test_cpd.py  test_diagnostics.py  test_displacement_grid_coarse.py  test_entry.py  test_image_pose_affine.py  test_image_pose_xcheck.py  test_inspect.py  test_intensity_qc.py  test_matcher.py  test_mt_bbox.py  test_napari_stitch.py  test_qc.py  test_rotation_search.py  test_smoke.py  test_solver.py  test_stitcher.py  test_synthetic.py  test_warp.py  test_warps_to_coarse.py
