#######################################################################
#  Serial Stitcher - An Automatic tool for tomograms stitching        #
#                                                                     #
#  https://github.com/RRobert92                                       #
#                                                                     #
#  Robert Kiewisz                                                     #
#  PolyForm Noncommercial License 1.0.0 - see LICENSE                 #
#######################################################################

[build-system]
requires = ["setuptools>42.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
line_length = 100
lines_between_types = 1
combine_as_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
