#######################################################################
#  Serial Stitcher - An Automatic tool for tomograms stitching        #
#                                                                     #
#  https://github.com/RRobert92                                       #
#                                                                     #
#  Robert Kiewisz                                                     #
#  PolyForm Noncommercial License 1.0.0 - see LICENSE                 #
#######################################################################
[metadata]
name = pandorica
version = attr: pandorica.__version__
description = Analytical tools for cryo-electron microscopy (stitching + napari validator).
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
keywords = cryo-em, tomography, stitching, microtubules, napari
url = https://github.com/RRobert92/pandorica
author = Robert Kiewisz
author_email = robert.kiewisz@gmail.com
license = PolyForm Noncommercial License 1.0.0
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: Other/Proprietary License
    Environment :: Console
    Environment :: GPU :: NVIDIA CUDA :: 11
    Natural Language :: English
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.10,!=3.12
include_package_data = True
install_requires = file: requirements.txt

[options.extras_require]
napari =
    napari
    qtpy

[options.entry_points]
napari.manifest =
    pandorica = pandorica.napari:napari.yaml

[options.package_data]
pandorica.napari = napari.yaml

[flake8]
max-line-length=100
extend-ignore = E203
